--- a/title.html
+++ b/title.html
@@ -1,9 +1,9 @@
 <title>m-Health</title>
-<meta property="og:title" content="m-Health"/>
+<meta property="og:title" content="Jitsi-Meet"/>
 <meta property="og:image" content="/images/titleIMG.jpg?v=1"/>
 <meta property="og:description" content="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
 <meta description="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
-<meta itemprop="name" content="m-Health"/>
+<meta itemprop="name" content="Jitsi-Meet"/>
 <meta itemprop="description" content="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
 <meta itemprop="image" content="/images/titleIMG.jpg?v=1"/>
 <link rel="icon" type="image/png" href="/images/titleIMG.jpg?v=1"/>
