--- a/title.html
+++ b/title.html
@@ -1,4 +1,4 @@
-<title>jitsi-meet</title>
+<title>m-Health</title>
 <meta property="og:title" content="Jitsi-Meet"/>
 <meta property="og:image" content="/images/titleIMG.jpg?v=1"/>
 <meta property="og:description" content="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
